# University_Homework_CPP

./: CMakeLists.txt
CPP_Labs_Bujor_Natalia/: Lab_1.cpp  Lab_2.cpp  Lab_3.cpp  Lab_4.cpp  Lab_5.cpp  Lab_6_Class_Phone.cpp  Lab_7_Legacy.cpp  Lab_8_Abstract_Class.cpp  Lab_9_Templates.cpp
