cmake_minimum_required(VERSION 3.30)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled main.cpp
        CPP_Labs_Bujor_Natalia/Lab_1.cpp
        CPP_Labs_Bujor_Natalia/Lab_2.cpp
        CPP_Labs_Bujor_Natalia/Lab_3.cpp
        CPP_Labs_Bujor_Natalia/Lab_4.cpp
        CPP_Labs_Bujor_Natalia/Lab_5.cpp
        CPP_Labs_Bujor_Natalia/Lab_6_Class_Phone.cpp
)
